[FIX] Fix popup jumping issue

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -98,6 +98,10 @@
 }
 
 /* Modal styles */
+body.modal-active {
+    overflow: hidden;
+}
+
 .modal {
     display: none;
     position: fixed;
@@ -106,17 +110,15 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0); /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    overflow: hidden;
 }
 
 .modal-container {
     position: relative;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
-
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
@@ -125,6 +127,25 @@
     min-width: 160px;
     max-width: 400px;
     border-radius: 8px;
+}
+
+.modal-container {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #fefefe;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    min-width: 160px;
+    max-width: 400px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .modal__header {
